# cpp_demo

./: CMakeLists.txt  makefile  readme.md
.github/workflows/: c-cpp.yml
cmake/: ConfigProject.cmake  Debug.cmake  Output.cmake  Pack.cmake  ToolChain.cmake
config/: app.service.in
infile/: app.conf.in  app.service.in  manifest.info.in
src/: CMakeLists.txt  main.cpp
src/3party/doctest/: CMakeLists.txt  README.md
src/3party/json/: CMakeLists.txt  README.md
src/3party/spdlog/: CMakeLists.txt  README.md
src/app/: CMakeLists.txt  application.cpp  application.h
src/app/common/: config.cpp  config.h  logger.h  make_unique.h  singleton.h  thread_pool.h  thread_safe_queue.h
src/app/manager/: config.h  config_manager.cpp  config_manager.h  manifest.h  manifest_manager.cpp  manifest_manager.h  task_manager.cpp  task_manager.h
src/app/network/: network.cpp  network.h
src/app/updater/: updater.cpp  updater.h
src/test/: CMakeLists.txt  main.cpp  test_singleton.cpp  test_thread_pool.cpp
